# aide

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.demo  Dockerfile.light  Dockerfile.multi  Dockerfile.production  FINAL_STATISTICS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PRODUCTION_SETUP.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_DOCKER.md  RELEASE_NOTES.md  REMAINING_TASKS.md  REMOTE_TROUBLESHOOTING.md  check_production_ready.py  cli.py  demo.py  demo_phase2.py  demo_rag_system.py  demo_self_improvement.py  demo_tools.py  diagnose_remote.py  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup_production.sh
config/: phase2_plan.yaml  phase3_plan.yaml  servers.yaml
docs/operations/: performance_tuning.md  system_administration.md  troubleshooting_guide.md
docs/user_guide/: advanced_features.md  getting_started.md  integration_guide.md
src/: __init__.py  cli.py  sample_module.py  test_module.py
src/agents/: __init__.py  base_agent.py  crew_agents.py  remote_agent.py
src/aide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cli/: __init__.py  cli_manager.py  commands.py  formatters.py  interactive.py
src/config/: __init__.py  config_manager.py  defaults.py
src/dashboard/: __init__.py  dashboard_server.py  enhanced_monitor.py  metrics_collector.py  realtime_monitor.py
src/learning/: __init__.py  feedback_processor.py
src/llm/: __init__.py  claude_code_client.py  (+1 more)
tests/: __init__.py
(+55 files in other folders)
