[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aide"
version = "0.1.0"
description = "Self-learning AI assistant for infrastructure engineering"
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "crewai>=0.1.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.8.0",
    "anyio>=4.0.0"
]

[project.scripts]
aide = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"